# desert_rose_email

./: .gitignore  auth.py  emails.py  main.py  pyproject.toml  requirements.txt  watch.py
.github/workflows/: main.yaml
controller/: email.py  watch.py
libs/: bigquery.py  gmail.py
models/: CallLogs.py
test/: test_units.py
